tests/negative/generics/sizeof_trait.orng
// sizeof_trait.orng:8:21: error: expected a type
//     @sizeof(Drawable)
//                    ^
// 
trait Drawable { fn draw(self) -> Int }

fn main() -> Int {
    @sizeof(Drawable)
}